# virtual-toaster-source

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: protocol.md
src/vtsource/: __init__.py  cli.py  daemon.py  protocol.py  video_source.py
tests/: test_colorspace.py  test_formats.py  test_protocol.py
vts-daemon/: LICENSE  pyproject.toml
vts-daemon/docs/: architecture.md
vts-daemon/src/vtsd/: colorspace.py  formats.py  protocol.py  video_source.py
vts-daemon/tests/: test_colorspace.py  test_formats.py  test_protocol.py
